Update Vimeo.java